packages/cubejs-schema-compiler/parser/GenericSqlParser.js
// Generated from GenericSql.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var GenericSqlListener = require('./GenericSqlListener').GenericSqlListener;
var grammarFileName = "GenericSql.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'('", "')'", "','", "'.'", "'SELECT'", "'*'", 
                     "'FROM'", "'WHERE'", "'AND'", "'OR'", "'NOT'", "'AS'", 
                     "'<'", "'<='", "'>'", "'>='", "'='", null, "'IS'", 
                     "'NULL'", "'CAST'" ];

var symbolicNames = [ null, null, null, null, null, "SELECT", "ASTERISK", 
                      "FROM", "WHERE", "AND", "OR", "NOT", "AS", "LT", "LTE", 
                      "GT", "GTE", "EQUALS", "NOT_EQUALS", "IS", "NULL", 
                      "CAST", "INDEXED_PARAM", "ID", "DIGIT", "QUOTED_ID", 
                      "STRING", "WHITESPACE" ];

var ruleNames =  [ "statement", "query", "fromTables", "selectFields", "field", 
                   "aliasField", "boolExp", "exp", "numeric", "binaryOperator", 
                   "unaryOperator", "idPath", "identifier" ];

function GenericSqlParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

GenericSqlParser.prototype = Object.create(antlr4.Parser.prototype);
GenericSqlParser.prototype.constructor = GenericSqlParser;

Object.defineProperty(GenericSqlParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

GenericSqlParser.EOF = antlr4.Token.EOF;
GenericSqlParser.T__0 = 1;
GenericSqlParser.T__1 = 2;
GenericSqlParser.T__2 = 3;
GenericSqlParser.T__3 = 4;
GenericSqlParser.SELECT = 5;
GenericSqlParser.ASTERISK = 6;
GenericSqlParser.FROM = 7;
GenericSqlParser.WHERE = 8;
GenericSqlParser.AND = 9;
GenericSqlParser.OR = 10;
GenericSqlParser.NOT = 11;
GenericSqlParser.AS = 12;
GenericSqlParser.LT = 13;
GenericSqlParser.LTE = 14;
GenericSqlParser.GT = 15;
GenericSqlParser.GTE = 16;
GenericSqlParser.EQUALS = 17;
GenericSqlParser.NOT_EQUALS = 18;
GenericSqlParser.IS = 19;
GenericSqlParser.NULL = 20;
GenericSqlParser.CAST = 21;
GenericSqlParser.INDEXED_PARAM = 22;
GenericSqlParser.ID = 23;
GenericSqlParser.DIGIT = 24;
GenericSqlParser.QUOTED_ID = 25;
GenericSqlParser.STRING = 26;
GenericSqlParser.WHITESPACE = 27;

GenericSqlParser.RULE_statement = 0;
GenericSqlParser.RULE_query = 1;
GenericSqlParser.RULE_fromTables = 2;
GenericSqlParser.RULE_selectFields = 3;
GenericSqlParser.RULE_field = 4;
GenericSqlParser.RULE_aliasField = 5;
GenericSqlParser.RULE_boolExp = 6;
GenericSqlParser.RULE_exp = 7;
GenericSqlParser.RULE_numeric = 8;
GenericSqlParser.RULE_binaryOperator = 9;
GenericSqlParser.RULE_unaryOperator = 10;
GenericSqlParser.RULE_idPath = 11;
GenericSqlParser.RULE_identifier = 12;


function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GenericSqlParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.query = function() {
    return this.getTypedRuleContext(QueryContext,0);
};

StatementContext.prototype.EOF = function() {
    return this.getToken(GenericSqlParser.EOF, 0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.exitStatement(this);
	}
};




GenericSqlParser.StatementContext = StatementContext;

GenericSqlParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, GenericSqlParser.RULE_statement);
    try {
        this.state = 34;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case GenericSqlParser.SELECT:
            this.enterOuterAlt(localctx, 1);
            this.state = 26;
            this.query();
            this.state = 27;
            this.match(GenericSqlParser.EOF);
            break;
        case GenericSqlParser.T__0:
            this.enterOuterAlt(localctx, 2);
            this.state = 29;
            this.match(GenericSqlParser.T__0);
            this.state = 30;
            this.query();
            this.state = 31;
            this.match(GenericSqlParser.T__1);
            this.state = 32;
            this.match(GenericSqlParser.EOF);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function QueryContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GenericSqlParser.RULE_query;
    this.from = null; // FromTablesContext
    this.where = null; // BoolExpContext
    return this;
}

QueryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
QueryContext.prototype.constructor = QueryContext;

QueryContext.prototype.SELECT = function() {
    return this.getToken(GenericSqlParser.SELECT, 0);
};

QueryContext.prototype.selectFields = function() {
    return this.getTypedRuleContext(SelectFieldsContext,0);
};

QueryContext.prototype.FROM = function() {
    return this.getToken(GenericSqlParser.FROM, 0);
};

QueryContext.prototype.fromTables = function() {
    return this.getTypedRuleContext(FromTablesContext,0);
};

QueryContext.prototype.WHERE = function() {
    return this.getToken(GenericSqlParser.WHERE, 0);
};

QueryContext.prototype.boolExp = function() {
    return this.getTypedRuleContext(BoolExpContext,0);
};

QueryContext.prototype.enterRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.enterQuery(this);
	}
};

QueryContext.prototype.exitRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.exitQuery(this);
	}
};




GenericSqlParser.QueryContext = QueryContext;

GenericSqlParser.prototype.query = function() {

    var localctx = new QueryContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, GenericSqlParser.RULE_query);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 36;
        this.match(GenericSqlParser.SELECT);
        this.state = 37;
        this.selectFields();
        this.state = 38;
        this.match(GenericSqlParser.FROM);
        this.state = 39;
        localctx.from = this.fromTables();
        this.state = 42;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===GenericSqlParser.WHERE) {
            this.state = 40;
            this.match(GenericSqlParser.WHERE);
            this.state = 41;
            localctx.where = this.boolExp();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FromTablesContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GenericSqlParser.RULE_fromTables;
    return this;
}

FromTablesContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FromTablesContext.prototype.constructor = FromTablesContext;

FromTablesContext.prototype.aliasField = function() {
    return this.getTypedRuleContext(AliasFieldContext,0);
};

FromTablesContext.prototype.enterRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.enterFromTables(this);
	}
};

FromTablesContext.prototype.exitRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.exitFromTables(this);
	}
};




GenericSqlParser.FromTablesContext = FromTablesContext;

GenericSqlParser.prototype.fromTables = function() {

    var localctx = new FromTablesContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, GenericSqlParser.RULE_fromTables);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 44;
        this.aliasField();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function SelectFieldsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GenericSqlParser.RULE_selectFields;
    return this;
}

SelectFieldsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SelectFieldsContext.prototype.constructor = SelectFieldsContext;

SelectFieldsContext.prototype.field = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FieldContext);
    } else {
        return this.getTypedRuleContext(FieldContext,i);
    }
};

SelectFieldsContext.prototype.enterRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.enterSelectFields(this);
	}
};

SelectFieldsContext.prototype.exitRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.exitSelectFields(this);
	}
};




GenericSqlParser.SelectFieldsContext = SelectFieldsContext;

GenericSqlParser.prototype.selectFields = function() {

    var localctx = new SelectFieldsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, GenericSqlParser.RULE_selectFields);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 46;
        this.field();
        this.state = 51;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===GenericSqlParser.T__2) {
            this.state = 47;
            this.match(GenericSqlParser.T__2);
            this.state = 48;
            this.field();
            this.state = 53;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FieldContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GenericSqlParser.RULE_field;
    return this;
}

FieldContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FieldContext.prototype.constructor = FieldContext;

FieldContext.prototype.aliasField = function() {
    return this.getTypedRuleContext(AliasFieldContext,0);
};

FieldContext.prototype.ASTERISK = function() {
    return this.getToken(GenericSqlParser.ASTERISK, 0);
};

FieldContext.prototype.enterRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.enterField(this);
	}
};

FieldContext.prototype.exitRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.exitField(this);
	}
};




GenericSqlParser.FieldContext = FieldContext;

GenericSqlParser.prototype.field = function() {

    var localctx = new FieldContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, GenericSqlParser.RULE_field);
    try {
        this.state = 56;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case GenericSqlParser.ID:
        case GenericSqlParser.QUOTED_ID:
            this.enterOuterAlt(localctx, 1);
            this.state = 54;
            this.aliasField();
            break;
        case GenericSqlParser.ASTERISK:
            this.enterOuterAlt(localctx, 2);
            this.state = 55;
            this.match(GenericSqlParser.ASTERISK);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function AliasFieldContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GenericSqlParser.RULE_aliasField;
    return this;
}

AliasFieldContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AliasFieldContext.prototype.constructor = AliasFieldContext;

AliasFieldContext.prototype.idPath = function() {
    return this.getTypedRuleContext(IdPathContext,0);
};

AliasFieldContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

AliasFieldContext.prototype.AS = function() {
    return this.getToken(GenericSqlParser.AS, 0);
};

AliasFieldContext.prototype.enterRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.enterAliasField(this);
	}
};

AliasFieldContext.prototype.exitRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.exitAliasField(this);
	}
};




GenericSqlParser.AliasFieldContext = AliasFieldContext;

GenericSqlParser.prototype.aliasField = function() {

    var localctx = new AliasFieldContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, GenericSqlParser.RULE_aliasField);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 58;
        this.idPath();
        this.state = 63;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GenericSqlParser.AS) | (1 << GenericSqlParser.ID) | (1 << GenericSqlParser.QUOTED_ID))) !== 0)) {
            this.state = 60;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===GenericSqlParser.AS) {
                this.state = 59;
                this.match(GenericSqlParser.AS);
            }

            this.state = 62;
            this.identifier();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function BoolExpContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GenericSqlParser.RULE_boolExp;
    return this;
}

BoolExpContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BoolExpContext.prototype.constructor = BoolExpContext;

BoolExpContext.prototype.exp = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpContext);
    } else {
        return this.getTypedRuleContext(ExpContext,i);
    }
};

BoolExpContext.prototype.AND = function() {
    return this.getToken(GenericSqlParser.AND, 0);
};

BoolExpContext.prototype.OR = function() {
    return this.getToken(GenericSqlParser.OR, 0);
};

BoolExpContext.prototype.NOT = function() {
    return this.getToken(GenericSqlParser.NOT, 0);
};

BoolExpContext.prototype.enterRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.enterBoolExp(this);
	}
};

BoolExpContext.prototype.exitRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.exitBoolExp(this);
	}
};




GenericSqlParser.BoolExpContext = BoolExpContext;

GenericSqlParser.prototype.boolExp = function() {

    var localctx = new BoolExpContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, GenericSqlParser.RULE_boolExp);
    try {
        this.state = 76;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 65;
            this.exp(0);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 66;
            this.exp(0);
            this.state = 67;
            this.match(GenericSqlParser.AND);
            this.state = 68;
            this.exp(0);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 70;
            this.exp(0);
            this.state = 71;
            this.match(GenericSqlParser.OR);
            this.state = 72;
            this.exp(0);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 74;
            this.match(GenericSqlParser.NOT);
            this.state = 75;
            this.exp(0);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExpContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GenericSqlParser.RULE_exp;
    return this;
}

ExpContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExpContext.prototype.constructor = ExpContext;

ExpContext.prototype.idPath = function() {
    return this.getTypedRuleContext(IdPathContext,0);
};

ExpContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

ExpContext.prototype.exp = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpContext);
    } else {
        return this.getTypedRuleContext(ExpContext,i);
    }
};

ExpContext.prototype.CAST = function() {
    return this.getToken(GenericSqlParser.CAST, 0);
};

ExpContext.prototype.AS = function() {
    return this.getToken(GenericSqlParser.AS, 0);
};

ExpContext.prototype.STRING = function() {
    return this.getToken(GenericSqlParser.STRING, 0);
};

ExpContext.prototype.numeric = function() {
    return this.getTypedRuleContext(NumericContext,0);
};

ExpContext.prototype.INDEXED_PARAM = function() {
    return this.getToken(GenericSqlParser.INDEXED_PARAM, 0);
};

ExpContext.prototype.binaryOperator = function() {
    return this.getTypedRuleContext(BinaryOperatorContext,0);
};

ExpContext.prototype.unaryOperator = function() {
    return this.getTypedRuleContext(UnaryOperatorContext,0);
};

ExpContext.prototype.enterRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.enterExp(this);
	}
};

ExpContext.prototype.exitRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.exitExp(this);
	}
};



GenericSqlParser.prototype.exp = function(_p) {
	if(_p===undefined) {
	    _p = 0;
	}
    var _parentctx = this._ctx;
    var _parentState = this.state;
    var localctx = new ExpContext(this, this._ctx, _parentState);
    var _prevctx = localctx;
    var _startState = 14;
    this.enterRecursionRule(localctx, 14, GenericSqlParser.RULE_exp, _p);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 107;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
        switch(la_) {
        case 1:
            this.state = 79;
            this.idPath();
            break;

        case 2:
            this.state = 80;
            this.identifier();
            this.state = 81;
            this.match(GenericSqlParser.T__0);

            this.state = 82;
            this.exp(0);
            this.state = 87;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===GenericSqlParser.T__2) {
                this.state = 83;
                this.match(GenericSqlParser.T__2);
                this.state = 84;
                this.exp(0);
                this.state = 89;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 90;
            this.match(GenericSqlParser.T__1);
            break;

        case 3:
            this.state = 92;
            this.match(GenericSqlParser.CAST);
            this.state = 93;
            this.match(GenericSqlParser.T__0);
            this.state = 94;
            this.exp(0);
            this.state = 95;
            this.match(GenericSqlParser.AS);
            this.state = 96;
            this.identifier();
            this.state = 97;
            this.match(GenericSqlParser.T__1);
            break;

        case 4:
            this.state = 99;
            this.match(GenericSqlParser.STRING);
            break;

        case 5:
            this.state = 100;
            this.numeric();
            break;

        case 6:
            this.state = 101;
            this.identifier();
            break;

        case 7:
            this.state = 102;
            this.match(GenericSqlParser.INDEXED_PARAM);
            break;

        case 8:
            this.state = 103;
            this.match(GenericSqlParser.T__0);
            this.state = 104;
            this.exp(0);
            this.state = 105;
            this.match(GenericSqlParser.T__1);
            break;

        }
        this._ctx.stop = this._input.LT(-1);
        this.state = 117;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,10,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                if(this._parseListeners!==null) {
                    this.triggerExitRuleEvent();
                }
                _prevctx = localctx;
                this.state = 115;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
                switch(la_) {
                case 1:
                    localctx = new ExpContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, GenericSqlParser.RULE_exp);
                    this.state = 109;
                    if (!( this.precpred(this._ctx, 10))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 10)");
                    }
                    this.state = 110;
                    this.binaryOperator();
                    this.state = 111;
                    this.exp(11);
                    break;

                case 2:
                    localctx = new ExpContext(this, _parentctx, _parentState);
                    this.pushNewRecursionContext(localctx, _startState, GenericSqlParser.RULE_exp);
                    this.state = 113;
                    if (!( this.precpred(this._ctx, 9))) {
                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
                    }
                    this.state = 114;
                    this.unaryOperator();
                    break;

                } 
            }
            this.state = 119;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,10,this._ctx);
        }

    } catch( error) {
        if(error instanceof antlr4.error.RecognitionException) {
	        localctx.exception = error;
	        this._errHandler.reportError(this, error);
	        this._errHandler.recover(this, error);
	    } else {
	    	throw error;
	    }
    } finally {
        this.unrollRecursionContexts(_parentctx)
    }
    return localctx;
};


function NumericContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GenericSqlParser.RULE_numeric;
    return this;
}

NumericContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NumericContext.prototype.constructor = NumericContext;

NumericContext.prototype.DIGIT = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(GenericSqlParser.DIGIT);
    } else {
        return this.getToken(GenericSqlParser.DIGIT, i);
    }
};


NumericContext.prototype.enterRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.enterNumeric(this);
	}
};

NumericContext.prototype.exitRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.exitNumeric(this);
	}
};




GenericSqlParser.NumericContext = NumericContext;

GenericSqlParser.prototype.numeric = function() {

    var localctx = new NumericContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, GenericSqlParser.RULE_numeric);
    try {
        this.state = 139;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case GenericSqlParser.DIGIT:
            this.enterOuterAlt(localctx, 1);
            this.state = 121; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 120;
            		this.match(GenericSqlParser.DIGIT);
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 123; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,11, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            this.state = 131;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
            if(la_===1) {
                this.state = 125;
                this.match(GenericSqlParser.T__3);
                this.state = 127; 
                this._errHandler.sync(this);
                var _alt = 1;
                do {
                	switch (_alt) {
                	case 1:
                		this.state = 126;
                		this.match(GenericSqlParser.DIGIT);
                		break;
                	default:
                		throw new antlr4.error.NoViableAltException(this);
                	}
                	this.state = 129; 
                	this._errHandler.sync(this);
                	_alt = this._interp.adaptivePredict(this._input,12, this._ctx);
                } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );

            }
            break;
        case GenericSqlParser.T__3:
            this.enterOuterAlt(localctx, 2);
            this.state = 133;
            this.match(GenericSqlParser.T__3);
            this.state = 135; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 134;
            		this.match(GenericSqlParser.DIGIT);
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 137; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,14, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function BinaryOperatorContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GenericSqlParser.RULE_binaryOperator;
    return this;
}

BinaryOperatorContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BinaryOperatorContext.prototype.constructor = BinaryOperatorContext;

BinaryOperatorContext.prototype.LT = function() {
    return this.getToken(GenericSqlParser.LT, 0);
};

BinaryOperatorContext.prototype.LTE = function() {
    return this.getToken(GenericSqlParser.LTE, 0);
};

BinaryOperatorContext.prototype.GT = function() {
    return this.getToken(GenericSqlParser.GT, 0);
};

BinaryOperatorContext.prototype.GTE = function() {
    return this.getToken(GenericSqlParser.GTE, 0);
};

BinaryOperatorContext.prototype.EQUALS = function() {
    return this.getToken(GenericSqlParser.EQUALS, 0);
};

BinaryOperatorContext.prototype.NOT_EQUALS = function() {
    return this.getToken(GenericSqlParser.NOT_EQUALS, 0);
};

BinaryOperatorContext.prototype.enterRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.enterBinaryOperator(this);
	}
};

BinaryOperatorContext.prototype.exitRule = function(listener) {
    if(listener instanceof GenericSqlListener ) {
        listener.exitBinaryOperator(this);
	}
};




GenericSqlParser.BinaryOperatorContext = BinaryOperatorContext;

GenericSqlParser.prototype.binaryOperator = function() {

    var localctx = new BinaryOperatorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, GenericSqlParser.RULE_binaryOperator);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 141;
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GenericSqlParser.LT) | (1 << GenericSqlParser.LTE) | (1 << GenericSqlParser.GT) | (1 << GenericSqlParser.GTE) | (1 << GenericSqlParser.EQUALS) | (1 << GenericSqlParser.NOT_EQUALS))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

